--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
     <script src="app/app.js"></script>
     <script src="app/route.js"></script>
     <script src="app/controllers.js"></script>
+    <script src="app/component.js"></script>
   </body>
 </html>
