--- a/index.html
+++ b/index.html
@@ -86,5 +86,7 @@
     <script src="app/route.js"></script>
     <script src="app/controllers.js"></script>
     <script src="app/component.js"></script>
+    <script src="app/filters.js"></script>
+    <script src="app/services.js"></script>
   </body>
 </html>
